--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "libscie-cli",
     "version": "0.0.1",
-    "description": "Command Line Interface (CLI) for a p2p scholarly communication infrastructure.",
+    "description": "Command Line Interface (CLI) for a p2p public collaborative projects",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
