--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "homepage": "https://github.com/hypergraph-xyz/cli#readme",
     "dependencies": {
         "@p2pcommons/sdk-js": "^0.1.0",
-        "meow": "^5.0.0",
+        "minimist": "^1.2.0",
         "prompts": "^2.1.0"
     },
     "bin": {
