--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
         "hypergraph": "./bin/hypergraph.js"
     },
     "devDependencies": {
+        "@babel/core": "^7.6.4",
+        "babelify": "^10.0.0",
+        "browserify": "^16.5.0",
         "prettier-standard": "^15.0.1",
         "standard": "^14.3.1"
     }
