--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Command Line Interface (CLI) for a p2p public collaborative projects",
     "main": "index.js",
     "scripts": {
-        "test": "prettier-standard '**/*.js' && standard"
+        "test": "prettier-standard '**/*.js' && standard && tap test.js"
     },
     "repository": {
         "type": "git",
@@ -33,6 +33,7 @@
     },
     "devDependencies": {
         "prettier-standard": "^15.0.1",
-        "standard": "^14.3.1"
+        "standard": "^14.3.1",
+        "tap": "^14.7.1"
     }
 }
