--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "devDependencies": {
         "prettier-standard": "^15.0.1",
         "standard": "^14.3.1",
+        "stream-match": "^1.0.0",
         "tap": "^14.7.1"
     }
 }
