--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hypergraph-xyz/cli",
-    "version": "0.2.0-beta",
+    "version": "0.2.1",
     "description": "Command Line Interface (CLI) for a p2p public collaborative projects",
     "main": "index.js",
     "scripts": {
