--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "fs.promises": "^0.1.2",
         "minimist": "^1.2.0",
         "open": "^7.0.0",
-        "prompts": "^2.1.0"
+        "prompts": "^2.1.0",
+        "readdirp": "^3.2.0"
     },
     "bin": {
         "hypergraph": "./bin/hypergraph.js"
