--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Command Line Interface (CLI) for a p2p public collaborative projects",
     "main": "index.js",
     "scripts": {
-        "test": "prettier-standard '**/*.js' && standard && tap test.js"
+        "test": "prettier-standard '**/*.js' && standard && tap --timeout=0 test.js"
     },
     "repository": {
         "type": "git",
