--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "minimist": "^1.2.0",
         "open": "^7.0.0",
         "prompts": "^2.1.0",
-        "readdirp": "^3.2.0"
+        "readdirp": "^3.2.0",
+        "update-notifier": "^3.0.1"
     },
     "bin": {
         "hypergraph": "./bin/hypergraph.js"
