--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "capitalize": "^2.0.0",
         "dat-encoding": "^5.0.1",
         "fs.promises": "^0.1.2",
+        "kleur": "^3.0.3",
         "minimist": "^1.2.0",
         "open": "^7.0.0",
         "prompts": "^2.1.0",
