--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   },
   "homepage": "https://github.com/hypergraph-xyz/cli#readme",
   "dependencies": {
-    "@p2pcommons/sdk-js": "^0.2.10",
+    "@p2pcommons/sdk-js": "^0.3.0",
     "capitalize": "^2.0.0",
     "dat-encoding": "^5.0.1",
+    "delegates": "^1.0.0",
     "fs.promises": "^0.1.2",
     "kleur": "^3.0.3",
     "minimist": "^1.2.0",
