--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/hypergraph-xyz/cli#readme",
   "dependencies": {
+    "@hypergraph-xyz/editor": "^1.0.2",
     "@p2pcommons/sdk-js": "^0.3.1",
     "capitalize": "^2.0.0",
     "dat-encoding": "^5.0.1",
