--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fs.promises": "^0.1.2",
     "kleur": "^3.0.3",
     "minimist": "^1.2.0",
+    "npm-run-path": "^4.0.0",
     "open": "^7.0.0",
     "prompts": "^2.1.0",
     "readdirp": "^3.2.0",
