--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "capitalize": "^2.0.0",
     "dat-encoding": "^5.0.1",
     "delegates": "^1.0.0",
+    "execa": "^3.4.0",
     "fs.promises": "^0.1.2",
     "kleur": "^3.0.3",
     "minimist": "^1.2.0",
-    "npm-run-path": "^4.0.0",
     "open": "^7.0.0",
     "prompts": "^2.1.0",
     "readdirp": "^3.2.0",
