--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "kleur": "^3.0.3",
     "minimist": "^1.2.0",
     "open": "^7.0.0",
+    "ora": "^4.0.3",
     "prompts": "^2.1.0",
     "readdirp": "^3.2.0",
     "update-notifier": "^3.0.1"
