--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/hypergraph-xyz/cli#readme",
   "dependencies": {
+    "@hypergraph-xyz/editor": "^1.1.0",
     "@p2pcommons/sdk-js": "^0.3.1",
     "capitalize": "^2.0.0",
     "dat-encoding": "^5.0.1",
@@ -33,6 +34,7 @@
     "kleur": "^3.0.3",
     "minimist": "^1.2.0",
     "open": "^7.0.0",
+    "ora": "^4.0.3",
     "prompts": "^2.1.0",
     "readdirp": "^3.2.0",
     "update-notifier": "^3.0.1"
