--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "homepage": "https://github.com/hypergraph-xyz/cli#readme",
   "dependencies": {
+    "@geut/hyperdrive-promise": "^1.0.0",
     "@hypergraph-xyz/editor": "^1.1.0",
-    "@p2pcommons/sdk-js": "^0.3.1",
+    "@p2pcommons/sdk-js": "github:p2pcommons/sdk-js#dpaez/fixed-deps",
     "capitalize": "^2.0.0",
     "dat-encoding": "^5.0.1",
     "delegates": "^1.0.0",
