--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,9 +15,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Use latest npm
         run: npm install -g npm@latest
-      - name: npm install, build, and test
-        run: |
-          npm ci
-          npm test
+      - name: npm install
+        run: npm ci
+      - name: npm test
+        run: npm test
         env:
           CI: true
