ci: bail out on first test failure

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,6 @@ jobs:
       - name: npm install
         run: npm ci
       - name: npm test
-        run: npm test
+        run: npm test -- --bail
         env:
           CI: true
