--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
   "dependencies": {
     "@hypergraph-xyz/editor": "^1.1.0",
     "@p2pcommons/sdk-js": "^0.5.0",
+    "body": "^5.1.0",
     "dat-encoding": "^5.0.1",
     "delegates": "^1.0.0",
     "kleur": "^3.0.3",
     "minimist": "^1.2.0",
+    "node-fetch": "^2.6.0",
     "open": "^7.0.0",
     "ora": "^4.0.3",
     "prompts": "^2.1.0",
