--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/hypergraph-xyz/cli#readme",
   "dependencies": {
     "@hypergraph-xyz/editor": "^1.1.0",
-    "@p2pcommons/sdk-js": "^0.5.2",
+    "@p2pcommons/sdk-js": "github:p2pcommons/sdk-js#dpaez/hyperdrive-daemon-fuse",
     "body": "^5.1.0",
     "dat-encoding": "^5.0.1",
     "delegates": "^1.0.0",
@@ -43,6 +43,7 @@
     "hypergraph": "./bin/hypergraph.js"
   },
   "devDependencies": {
+    "@hyperswarm/dht": "^3.6.5",
     "execa": "^4.0.0",
     "np": "^6.0.0",
     "prettier-standard": "^16.0.0",
